# launch-atlas

./: .gitignore  Cargo.toml  LICENSE  README.md  peaks-bern.json
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: hillshade.rs  main.rs  png_util.rs  trail_graph.rs
crates/api/static/: index.html
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: dem.rs  geom.rs  launch.rs  lib.rs  wind.rs
crates/data/: Cargo.toml
crates/data/src/: bafu.rs  lib.rs  lifts.rs  lv95.rs  obstacles.rs  region.rs  stac.rs  tiff_reader.rs  trails.rs  warnings.rs
crates/fetch/: Cargo.toml
crates/fetch-paths/: Cargo.toml
crates/fetch-paths/src/: main.rs
crates/fetch-trails/: Cargo.toml
crates/fetch-trails/src/: main.rs
crates/fetch-warnings/: Cargo.toml
crates/fetch-warnings/src/: main.rs
crates/fetch/src/: main.rs
crates/glide/: Cargo.toml
crates/glide/src/: lib.rs
crates/hike/: Cargo.toml
crates/hike/src/: lib.rs
crates/launch/: Cargo.toml
crates/launch/src/: lib.rs
crates/score/: Cargo.toml
crates/score/src/: lib.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: lib.rs
