[package]
name = "hikefly-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hikefly-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "5", default-features = false, features = ["deflate"] }
thiserror = "2"
