[package]
name = "hikefly-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "launchatlas-fetch-dem"
path = "src/main.rs"

[dependencies]
hikefly-core.workspace = true
hikefly-data.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
